# rpg-logic-engine

./: .gitignore
cello/: CMakeLists.txt  character.c  character.h  defines.h  dice.c  dice.h  main.c
scala/: .scalafmt.conf  build.sbt
scala/src/main/scala/com/qwerfah/rpg_logic_engine/: AppSettings.scala  Main.scala
scala/src/main/scala/com/qwerfah/rpg_logic_engine/api/: ApiActor.scala  ConsoleApi.scala  EngineApi.scala  WebApi.scala
scala/src/main/scala/com/qwerfah/rpg_logic_engine/engine/action/: Action.scala  ActionArgs.scala  ActionResult.scala
scala/src/main/scala/com/qwerfah/rpg_logic_engine/engine/character/: Character.scala  CharacterInfo.scala
scala/src/main/scala/com/qwerfah/rpg_logic_engine/engine/session/: SessionActor.scala  SessionMode.scala
scala/src/main/scala/com/qwerfah/rpg_logic_engine/engine/time/: SimpleTimeModel.scala  TimeModel.scala
